--- a/package.json
+++ b/package.json
@@ -30,11 +30,16 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-gifted-charts": "^1.4.7",
     "react-native-graph": "^1.0.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-svg": "^14.1.0",
+    "react-native-web": "~0.19.6",
+    "victory": "^36.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
