--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@apollo/client": "^3.9.2",
     "@expo/vector-icons": "^14.0.0",
+    "@gluestack-style/react": "^1.0.48",
+    "@gluestack-ui/themed": "^1.1.8",
     "@react-navigation/native": "^6.0.2",
-    "@shopify/react-native-skia": "0.1.221",
+    "@shopify/react-native-skia": "^0.1.221",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
@@ -37,7 +39,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-svg": "^13.4.0",
     "react-native-web": "~0.19.6",
     "victory": "^36.9.1"
   },
