--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gifted-charts": "^1.4.7",
     "react-native-graph": "^1.0.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "^6.2.3",
     "react-native-pie-chart": "^3.0.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
