--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.2",
+    "@aws-amplify/react-native": "^1.0.17",
     "@expo/vector-icons": "^14.0.0",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/themed": "^1.1.8",
+    "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-community/netinfo": "^11.3.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "^0.1.221",
+    "aws-amplify": "^6.0.17",
     "expo": "~50.0.5",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
@@ -32,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-graph": "^1.0.2",
     "react-native-linear-gradient": "^2.8.3",
