--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "dependencies": {
     "@apollo/client": "^3.9.2",
     "@aws-amplify/react-native": "^1.0.17",
+    "@aws-amplify/rtn-web-browser": "^1.0.17",
+    "@aws-amplify/ui-react-native": "^2.1.2",
     "@expo/vector-icons": "^14.0.0",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/themed": "^1.1.8",
     "@react-native-async-storage/async-storage": "^1.22.2",
     "@react-native-community/netinfo": "^11.3.0",
-    "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "^0.1.221",
     "aws-amplify": "^6.0.17",
     "expo": "~50.0.5",
