--- a/package.json
+++ b/package.json
@@ -14,20 +14,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.2",
-    "@aws-amplify/react-native": "^1.0.17",
+    "@aws-amplify/react-native": "^1.0.18",
     "@aws-amplify/rtn-web-browser": "^1.0.17",
     "@aws-amplify/ui-react-native": "^2.1.2",
     "@expo/vector-icons": "^14.0.0",
     "@gluestack-style/react": "^1.0.48",
     "@gluestack-ui/themed": "^1.1.8",
-    "@react-native-async-storage/async-storage": "^1.22.2",
-    "@react-native-community/netinfo": "^11.3.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/netinfo": "^11.1.0",
     "@shopify/react-native-skia": "^0.1.221",
+    "@types/react-native": "^0.70.19",
     "aws-amplify": "^6.0.17",
-    "expo": "~50.0.5",
+    "expo": "~50.0.8",
     "expo-font": "~11.10.2",
     "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.6",
+    "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
@@ -35,9 +36,9 @@
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
+    "react-native": "^0.73.4",
     "react-native-gesture-handler": "~2.14.0",
-    "react-native-get-random-values": "^1.10.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-gifted-charts": "^1.4.7",
     "react-native-graph": "^1.0.2",
     "react-native-linear-gradient": "^2.8.3",
@@ -46,7 +47,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "^14.1.0",
     "react-native-web": "~0.19.6",
     "victory": "^36.9.1"
   },
@@ -54,7 +55,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~50.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
